# workflow-os

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MAINTAINERS.md  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  design_proposal.yml  feature_request.yml  security_report.yml
.github/workflows/: ci.yml
crates/workflow-cli/: Cargo.toml
crates/workflow-cli/src/: main.rs
crates/workflow-cli/tests/: ci_read_only_example.rs  cli.rs  github_read_only_example.rs  jira_read_only_example.rs  vertical_slice_example.rs
crates/workflow-core/: Cargo.toml
crates/workflow-core/src/: adapters.rs  approval_presentation.rs  audit.rs  capability_authority.rs  ci.rs  definitions.rs  diagnostic.rs  error.rs  evidence.rs  executor.rs  github.rs  governance_profile.rs  harness.rs  high_assurance_approval.rs  identifiers.rs  immutable_run_bundle.rs  immutable_run_bundle_builder.rs  immutable_run_bundle_record.rs  immutable_run_bundle_store.rs  jira.rs  lib.rs  loader.rs  local_check.rs  local_check_attestation.rs  observability.rs  policy.rs  project.rs  proportional_governance.rs  proportional_governance_assessment.rs  proportional_governance_binding.rs  proportional_governance_immutable_bundle.rs  proportional_governance_workflow_derivation.rs  provider_write.rs  redaction.rs  runtime.rs  side_effect.rs  side_effect_discovery.rs  state.rs  timestamp.rs  typed_handoff.rs  (+8 more)
crates/workflow-core/tests/: adapters.rs  agent_harness_hook_contract.rs  agent_harness_hook_invocation.rs  approval_presentation.rs  audit_projection.rs  capability_authority.rs  ci_adapter.rs  diagnostic_evidence.rs  evidence_reference.rs  github_adapter.rs  harness_contract.rs  high_assurance_approval.rs  immutable_run_bundle_builder.rs  immutable_run_bundle_store.rs  jira_adapter.rs  local_check.rs  local_check_attestation.rs  local_executor.rs  policy.rs  primitives.rs  project_loader.rs  project_specs.rs  project_validation.rs  proportional_governance.rs  proportional_governance_assessment.rs  proportional_governance_immutable_bundle.rs  proportional_governance_workflow_derivation.rs  provider_write.rs  runtime_events.rs  side_effect.rs  side_effect_discovery.rs  typed_handoff.rs  work_report.rs  work_report_contract.rs  workflow_authoring.rs  workflow_catalog.rs  workflow_catalog_index.rs  workflow_catalog_store.rs  workflow_skill_definitions.rs  write_adapter_preflight.rs
docs/: ENGINEERING_STANDARD.md  PROJECT_CHARTER.md
docs/adr/: 0001-rust-core-typescript-sdk.md  0002-local-first-kernel-before-integrations.md  0003-stateless-workers-over-durable-state.md  0004-event-sourced-run-model.md  0005-level-1-2-autonomy-default.md  0006-v0-kernel-architecture-contract.md  0007-governed-work-pattern.md  0008-reasoning-lineage-claim-graph.md  0009-evidence-reference-core-model.md  0010-governed-multi-step-workflow-execution.md  0011-side-effect-boundary.md  README.md
docs/architecture/: README.md  overview.md  runtime-invariants.md  rust-typescript-boundary.md
docs/cli/: README.md  approve.md  author-workflow.md  doctor.md  exit-codes.md  first-run.md  init-agent-harness.md  init-repo-governance.md  (+7 more)
scripts/: check-contracts.mjs  check-docs.mjs  check-integrations.mjs  lint-typescript.mjs  self-governed-benchmark.mjs  self-governed-benchmark.test.mjs  smoke-live-integrations.mjs
(+1058 files in other folders)
