[package]
name = "workflow-cli"
version = "0.1.0-preview.1"
description = "CLI foundation for Workflow OS."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "workflow-os"
path = "src/main.rs"

[dependencies]
workflow-core = { path = "../workflow-core" }

[lints]
workspace = true
