[package]
name = "workflow-cli"
version = "0.2.0-preview.1"
description = "CLI foundation for Workflow OS."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "workflow-os"
path = "src/main.rs"

[dependencies]
serde_json = "1"
workflow-core = { path = "../workflow-core" }

[dev-dependencies]
sha2 = "0.10"

[lints]
workspace = true
