[package]
name = "workflow-core"
version = "0.0.0"
description = "Canonical Rust core foundation for Workflow OS."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }

[dev-dependencies]

[lints]
workspace = true
