[package]
name = "workflow-core"
version = "0.2.0-preview.1"
description = "Canonical Rust core foundation for Workflow OS."
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
ureq = "2.12"

[dev-dependencies]

[lints]
workspace = true
